k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lalavisit
  labels:
    name: lalavisit
    app.kubernetes.io/name: lalavisit
